syntax = "proto3";

option go_package = "osopb3";
option java_package = "com.qingyuanos.core.googleprotobuf.osopb3";
option java_outer_classname = "GrpcServer";

package paas.ci.osopb3;

import "google/api/annotations.proto";
//import "google/protobuf/any.proto";

//import "github.com/openshift/origin/pkg/build/api/v1/generated.proto";
//import "k8s.io/kubernetes/pkg/api/unversioned/generated.proto";
//import "k8s.io/kubernetes/pkg/api/v1/generated.proto";

import "paas/ci/osopb3/model.proto";

service SimpleService {

	rpc CreateProjectIntoArbitrary(ProjectCreationRequestData) returns (ProjectResponseDataArbitrary) {
		option (google.api.http) = {
          post: "/v1/apaas/projects"
          body: "*"
        };		
	}

	rpc RetrieveProjectIntoArbitrary(ProjectRetrieveRequestData) returns (ProjectResponseDataArbitrary) {
		option (google.api.http) = {
          get: "/v1/apaas/projects/{name}"
        };
	}

	rpc UpdateProjectIntoArbitrary(ProjectUpdationRequestData) returns (ProjectResponseDataArbitrary){
		option (google.api.http) = {
	      put: "/v1/apaas/projects/{name}"
		};
	}

	rpc DeleteProjectIntoArbitrary(ProjectDeletionRequestData) returns (ProjectResponseDataArbitrary){
		option (google.api.http) = {
	      delete: "/v1/apaas/projects/{name}"
		};
	}

	rpc CreateOriginProject(CreateOriginProjectRequest) returns (CreateOriginProjectResponse){
		option (google.api.http) = {
          put: "/v1/odib/projects/{name}"
          body: "*"
        };
	}

	rpc FindProject(FindProjectRequest) returns (FindProjectResponse) {
		option (google.api.http) = {
          get: "/v1/odib/projects/{name}"
          body: "*"
        };
	}

	rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse){
		option (google.api.http) = {
	      delete: "/v1/odib/projects/{name}"
		};
	}

	//rpc EnterWorkspace(EnterWorkspaceRequest) returns (EnterWorkspaceResponse);

	//rpc LeaveWorkspace(LeaveWorkspaceRequest) returns (LeaveWorkspaceResponse);

	//rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);

	//rpc LookupProjects(LookupProjectsRequest) returns (LookupProjectsResponse);

	//rpc OpenProject(OpenProjectRequest) returns (OpenProjectResponse);

	//rpc NewOsoBuildConfig(github.com.openshift.origin.pkg.build.api.v1.BuildConfig) returns (github.com.openshift.origin.pkg.build.api.v1.BuildConfig) {
	//	option (google.api.http) = {
	//    post: "/v1/oapiv1/buildconfigs"
	//	  body: "*"
	//	};
	//}

	//rpc StartOsoBuild(github.com.openshift.origin.pkg.build.api.v1.Build) returns (github.com.openshift.origin.pkg.build.api.v1.Build) {
	//	option (google.api.http) = {
	//    post: "/v1/oapiv1/builds"
	//	  body: "*"
	//	};		
	//}
	
	rpc BuildDockerImage(RawData) returns (RawData) {
		option (google.api.http) = {
	      post: "/v1/raw/dockerbuilds"
		  body: "*"
		};
	}
	
	rpc RebuildDockerImage(RawData) returns (RawData) {
		option (google.api.http) = {
	      put: "/v1/raw/dockerbuilds/{buildname}"
		  body: "*"
		};
	}
	
	rpc CreateIntoBuildDockerImage(DockerBuildRequestData) returns (DockerBuildResponseData) {
		option (google.api.http) = {
	      post: "/v1/dockerbuilds"
		  body: "*"
		};
	}
	
	rpc UpdateIntoBuildDockerImage(DockerBuildRequestData) returns (DockerBuildResponseData) {
		option (google.api.http) = {
	      put: "/v1/dockerbuilds/{buildname}"
		  body: "*"
		};
	}

	//rpc RebuildDockerImage(RebuildDockerImageRequest) returns (stream RebuildDockerImageResponse) {
	//}

	//rpc CatBuildMessage(CatBuildMessageRequest) returns (CatBuildMessageResponse) {
	//}

	//rpc RmBuildMessage(RmBuildMessageRequest) returns (RmBuildMessageResponse) {
	//}

	//rpc CpDockerfileBuildSource(CpDockerfileBuildSourceRequest) returns (CpDockerfileBuildSourceResponse) {
	//}

	//rpc CatDockerfileBuildSource(CatDockerfileBuildSourceRequest) returns (CatDockerfileBuildSourceResponse) {
	//}

	//rpc ViDockerfileBuildSource(ViDockerfileBuildSourceRequest) returns (ViDockerfileBuildSourceResponse) {
	//}

	//rpc RmDockerfileBuildSource(RmDockerfileBuildSourceRequest) returns (RmDockerfileBuildSourceResponse) {
	//}
}

//
// Project
//
message ProjectResponseDataArbitrary {
	string name = 1;

	string result = 2;

	repeated string finalizers = 3;
	
	K8sTypeMeta datatype = 4;
	K8sObjectMeta metadata = 5;
	K8sNamespacePhase resultingCode = 6;
	
	RawData raw = 7;
    //string datatype = 1;
	//google.protobuf.Any arbitrary = 2;
}

message ProjectCreationRequestData {
	string name = 1;
	
	map<string, string> labels = 2;
	
	map<string, string> annotations = 3;
	
	repeated string finalizers = 4;
}

message ProjectCreationResponseData {
	string name = 1;

	string status = 2;

	repeated string finalizers = 3;
	
	K8sNamespacePhase phase = 4;
	
	RawData raw = 5;

	//google.protobuf.Any arbitrary = 5;
}

message ProjectRetrieveRequestData {
    string name = 1;
}

message ProjectRetrieveResponseData {
    string name = 1;

	string status = 2;

	repeated string finalizers = 3;
	
	K8sNamespacePhase phase = 4;
	
	RawData raw = 5;

	//google.protobuf.Any arbitrary = 5;
}

message ProjectUpdationRequestData {
	string name = 1;
	
	map<string, string> labels = 2;
	
	map<string, string> annotations = 3;
}

message ProjectDeletionRequestData {
	string name = 1;
}

message ProjectDeletionResponseData {
    string name = 1;

	string status = 2;

	repeated string finalizers = 3;
	
	K8sNamespacePhase phase = 4;
	
	RawData raw = 5;

	//google.protobuf.Any arbitrary = 5;
}


message CreateOriginProjectRequest {
    string name = 1;
	
	repeated string finalizers = 2;
}

message CreateOriginProjectResponse {
	//google.protobuf.Any project = 1;
	
	string id = 1;
	string phase = 2;
}

message FindProjectRequest {
	string name = 1;
}

message FindProjectResponse {
	//google.protobuf.Any project = 1;
	
	bytes odefv1RawData = 1;
}

message DeleteProjectRequest {
	string name = 1;
}

message DeleteProjectResponse {
	int64 flag = 1;
}

//
// Docker Build
//
message DockerBuildConfigRequestData {
	string name = 1;
    string projectName = 2;

    repeated OsoBuildTriggerPolicy triggers = 3;
	
	string runPolicy = 4;
	
	OsoCommonSpec commonSpec = 5;		
	
	enum OsoBuildRunPolicy {
		Parallel = 0;
		Serial = 1;
		SerialLatestOnly = 2;
	}
	OsoBuildRunPolicy osoBuildRunPolicy = 6;
	
	map<string, string> labels = 7;
	map<string, string> annotations = 8;
}

message DockerBuildConfigResponseData {
	int64 state = 1;

	K8sObjectMeta metadata = 2;	
}

message DockerBuildRequestData {
	string name = 1;
	string projectName = 2;
	
	DockerBuildConfigRequestData configSpec = 3;
	repeated OsoBuildTriggerCause triggeredBy = 4;
	
	map<string, string> labels = 5;
	map<string, string> annotations = 6;
}

message DockerBuildResponseData {
	OsoBuildStatus result = 1;

	DockerBuildConfigResponseData configResult = 2;

	K8sObjectMeta metadata = 3;	
}

// message DockerBuildResponseRaw {
//     string name = 1;	
//     RawData raw = 2;
// }

message RawData {
	string objectName = 1;
	bytes objectBytes = 2;
}

//message BuildSpec {
//	BuildCommonSpec commonSpec = 1;
//	repeated BuildTriggerCause triggeredBy = 2;
//}	
//
//message BuildRequest {
//	string    name    = 1;
//	string    project = 2;
//	BuildSpec spec    = 3;
//}
//
//message BuildResponse {
//	string    name    = 1;
//	string    project = 2;
//	BuildSpec spec    = 3;
//}
//
//message BuildConfigRequest {
//	string          name    = 1;
//	string          project = 2;
//	BuildConfigSpec spec    = 3;
//}
//
//message BuildConfigResponse {
//	string    name    = 1;
//	string    project = 2;
//	int64     status  = 3;
//}
